# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  10 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed a bug
  due to the cleanup patch where zfill() was being called on an integer.

  09 Dec 2004; Marius Mauch <genone@gentoo.org> bin/ebuild-functions.sh:
  Fixing stupid typo that broke einstall for CONF_LIBDIR archs.

  09 Dec 2004; Marius Mauch <genone@gentoo.org>
  bin/ebuild-default-functions.sh:
  Changing LDFLAGS to CFLAGS for the setXid check.

  08 Dec 2004; Marius Mauch <genone@gentoo.org> pym/portage.py:
  Changing CWD back to the original value broke verify-rdepend, fixing it with
  the same code as used for collision-protect. Also made the time displays in
  treewalk more readable.

  08 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> portage_syntax.py: Inital
  commit. Refactors all of portage_versions.py and some functions from
  portage.py into a CPV class and an Atom class.

  08 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> ebuild-default-functions.sh
  emerge portageq portage.py portage_dep.py portage_exec.py portage_util.py
  portage_versions.py: Added Ludal's clean up patch. #69523

  05 Dec 2004; Brian Harring <ferringb@gentoo.org> tarball.sh: Yanked
  the script- A) it's specific to nicks setup, B) the tarball/release 
  creation functionality is already handled by the autotooling of portage
  (make dist), C) make dist does it better, and automatically handles
  pulling in all required deps as an ancillary function of it's building/installing,
  D) make dist requires no specific maintenance while tarball.sh does.

  05 Dec 2004; Brian Harring <ferringb@gentoo.org> pym/cache, pym/cache/template.py,