@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  11 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
+  Modified atom.match() to reflect the change of cpv becoming an attribute of
+  atom.
+
   10 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed a bug
   due to the cleanup patch where zfill() was being called on an integer.
 
